Closed Bug 393137 Opened 17 years ago Closed 17 years ago

memory leak and use of uninitialized obj-c object in drag code

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

Details

(Keywords: memory-leak)

Attachments

(1 file)

999 bytes, patch
cbarrett
: review+
mikepinkerton
: superreview+
Details | Diff | Splinter Review
 
Flags: blocking1.9+
Attached patch fix v1.0Splinter Review
Attachment #277651 - Flags: review?(cbarrett)
Comment on attachment 277651 [details] [diff] [review]
fix v1.0

sr=pink
Attachment #277651 - Flags: superreview+
Attachment #277651 - Flags: review?(cbarrett)
Comment on attachment 277651 [details] [diff] [review]
fix v1.0

I believed this was done in the mistaken belief that it would avoid creating an extra image rep.

The docs for initWithSize state that "This method does not add any image representations to the image object.. It is permissible to initialize the receiver by passing a size of (0.0, 0.0); however, the receiver’s size must be set to a non-zero value before the NSImage object is used or an exception will be raised."

Good catch on the imageRep leak. r=me
Attachment #277651 - Flags: review+
landed on trunk
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: