fix memory leak and use of uninitialized obj-c object in cocoa drag service. b=393137 r/sr=pinkerton